Fixes based on feedback

--- a/exercises/practice/minesweeper/.meta/config.json
+++ b/exercises/practice/minesweeper/.meta/config.json
@@ -2,6 +2,9 @@
   "authors": [
     "meatball133"
   ],
+  "contributors": [
+    "ryanplusplus"
+  ],
   "files": {
     "solution": [
       "src/minesweeper.cr"
