Added changes based on feedback

--- a/concepts/classes/.meta/config.json
+++ b/concepts/classes/.meta/config.json
@@ -1,5 +1,5 @@
 {
   "blurb": "Crystal allows the creation of objects through the use of classes. Objects is a central concept in Crystal, since everything in Crystal is an object.",
   "authors": ["meatball133"],
-  "contributors": ["vaeng"]
+  "contributors": ["vaeng", "devnote-dev"]
 }
