--- a/exercises/concept/johannes-juice-maker/.meta/config.json
+++ b/exercises/concept/johannes-juice-maker/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": ["vaeng"],
+  "contributors": ["vaeng", "devnote-dev"],
   "files": {
     "solution": ["src/johannes_juice_maker.cr"],
     "test": ["spec/johannes_juice_maker_spec.cr"],
