--- a/exercises/practice/resistor-color-expert/.meta/config.json
+++ b/exercises/practice/resistor-color-expert/.meta/config.json
@@ -13,8 +13,8 @@
         ".meta/src/example.cr"
       ]
     },
-    "blurb": "Convert color codes, as used on resistors, to a human-readable label.",
-    "source": "Maud de Vries, Erik Schierboom",
-    "source_url": "https://github.com/exercism/problem-specifications/issues/1549"
+    "blurb": "Convert color codes as used on resistors with different bands to a human-readable label.",
+    "source": "Based on earlier resistor color exercises made by Erik Schierboom and Maud de Vries",
+    "source_url": "https://github.com/exercism/problem-specifications/issues/1464"
   }
   
