--- a/config.json
+++ b/config.json
@@ -122,6 +122,14 @@
         "concepts": ["while-loops", "return"],
         "prerequisites": ["conditionals"],
         "status": "beta"
+      },
+      {
+        "slug": "library-of-luton",
+        "name": "Library of Luton",
+        "uuid": "d98302fa-fd76-469d-83dd-235c71363b43",
+        "concepts": ["chars"],
+        "prerequisites": ["while-loops"],
+        "status": "wip"
       }
     ],
     "practice": [
@@ -1113,6 +1121,11 @@
       "uuid": "e0f1bb58-def6-4195-a0f2-661ba351858f",
       "slug": "while-loops",
       "name": "While Loops"
+    },
+    {
+      "uuid": "2c28dd98-4628-4d88-b410-8f742ad978ab",
+      "slug": "chars",
+      "name": "Chars"
     }
   ],
   "key_features": [
