Updates based on feedback

--- a/exercises/concept/castle-dinner/.meta/config.json
+++ b/exercises/concept/castle-dinner/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["ryanplusplus"],
   "files": {
     "solution": ["src/castle_dinner.cr"],
     "test": ["spec/castle_dinner_spec.cr"],
