--- a/concepts/char/.meta/config.json
+++ b/concepts/char/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "Crystal has a Char type, which represents a 32 bit unicode code point, they are created with a single quote, and can be escaped with a backslash.",
+  "blurb": "Crystal has a Char type, which represents a 32 bit unicode code point. They are created with a single quote and can be escaped with a backslash.",
   "authors": ["meatball133"],
-  "contributors": []
+  "contributors": ["eriksheirboom"]
 }
