--- a/exercises/concept/library-of-luton/.meta/config.json
+++ b/exercises/concept/library-of-luton/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["eriksheirboom"],
   "files": {
     "solution": ["src/library_of_luton.cr"],
     "test": ["spec/library_of_luton_spec.cr"],
