Changes based on feedback

--- a/exercises/concept/bellebrook-basket-league/.meta/config.json
+++ b/exercises/concept/bellebrook-basket-league/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "authors": ["meatball133"],
+  "authors": ["meatball133", "ryanplusplus"],
   "contributors": [],
   "files": {
     "solution": ["src/bellebrook_basket_league.cr"],
