--- a/concepts/ranges/.meta/config.json
+++ b/concepts/ranges/.meta/config.json
@@ -1,5 +1,5 @@
 {
   "blurb": "Crystal has Range objects which represents an interval between two values.",
   "authors": ["meatball133"],
-  "contributors": ["kotp"]
+  "contributors": ["kotp", "ryanplusplus"]
 }
