--- a/exercises/concept/chess-game/.meta/config.json
+++ b/exercises/concept/chess-game/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["ryanplusplus"],
   "files": {
     "solution": ["src/chess_game.cr"],
     "test": ["spec/chess_game_spec.cr"],
