--- a/exercises/concept/password-lock/.meta/config.json
+++ b/exercises/concept/password-lock/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["ryanplusplus"],
   "files": {
     "solution": ["src/password_lock.cr"],
     "test": ["spec/password_lock_spec.cr"],
