Changes based on feedback

--- a/exercises/concept/blackjack/.meta/config.json
+++ b/exercises/concept/blackjack/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["ryanplusplus"],
   "files": {
     "solution": ["src/blackjack.cr"],
     "test": ["spec/blackjack_spec.cr"],
