--- a/exercises/concept/language-list/.meta/config.json
+++ b/exercises/concept/language-list/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["ryanplusplus"],
   "files": {
     "solution": ["src/language_list.cr"],
     "test": ["spec/language_list_spec.cr"],
