Added exercises and various fixes

--- a/exercises/concept/foto-fusionist/.meta/config.json
+++ b/exercises/concept/foto-fusionist/.meta/config.json
@@ -7,5 +7,5 @@
     "exemplar": [".meta/src/exemplar.cr"]
   },
   "icon": "hexadecimal",
-  "blurb": "TODO"
+  "blurb": "Help the your friend develop Foto Fusionist, while learning about Binary & Octal & Hexadecimal"
 }
