Add changes based on feedback

--- a/config.json
+++ b/config.json
@@ -1047,7 +1047,7 @@
     {
       "uuid": "4dd28cdc-f197-490b-bbfb-5cd33bbdb6af",
       "slug": "binary-octal-hexadecimal",
-      "name": "Binary & Octal & Hexadecimal"
+      "name": "Binary, Octal, and Hexadecimal"
     },
     {
       "uuid": "644484e8-7eb9-4db0-ba6c-bf83439bf4f7",
