--- a/exercises/concept/foto-fusionist/.meta/config.json
+++ b/exercises/concept/foto-fusionist/.meta/config.json
@@ -1,11 +1,11 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["ryanplusplus"],
   "files": {
     "solution": ["src/foto_fusionist.cr"],
     "test": ["spec/foto_fusionist_spec.cr"],
     "exemplar": [".meta/src/exemplar.cr"]
   },
   "icon": "hexadecimal",
-  "blurb": "Help the your friend develop Foto Fusionist, while learning about Binary & Octal & Hexadecimal"
+  "blurb": "Help the your friend develop Foto Fusionist, while learning about Binary, Octal, and Hexadecimal"
 }
