--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       # Allows running the job multiple times with different configurations
       matrix:
-        crystal: [1.6, 1.7, 1.8, 1.9, 1.10, 1.11.X]
+        crystal: [1.7, 1.8, 1.9, 1.10, 1.11.X]
     container:
       image: crystallang/crystal:${{ matrix.crystal }}
     steps:
