--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,10 +45,12 @@ jobs:
   exercises-windows:
     name: Check exercises Crystal on Windows
     runs-on: windows-2022
-    container:
-      image: crystallang/crystal:1.10.1
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
+      - name: Install Crystal
+        uses: crystal-lang/install-crystal@v1
+        with:
+          crystal: "1.10.1"
       - name: Install jq
         run: winget install jqlang.jq
       - name: Run tests
