--- a/exercises/practice/leap/.approaches/config.json
+++ b/exercises/practice/leap/.approaches/config.json
@@ -1,7 +1,7 @@
 {
   "introduction": {
     "authors": ["meatball133"],
-    "contributors": []
+    "contributors": ["BNAndras"]
   },
   "approaches": [
     {
@@ -9,14 +9,24 @@
       "slug": "divisible-by",
       "title": "Use divisible-by",
       "blurb": "Use divisible-by to check number.",
-      "authors": ["meatball133"]
+      "authors": ["meatball133"],
+      "contributors": ["BNAndras"]
     },
     {
       "uuid": "9952fef5-9f2f-4575-94fc-bc4e96593cd6",
       "slug": "modulus",
       "title": "Uses modulus",
       "blurb": "Use modulus to check number.",
-      "authors": ["meatball133"]
+      "authors": ["meatball133"],
+      "contributors": ["BNAndras"]
+    },
+    {
+      "uuid": "5a0d8b86-57d7-4418-a730-09be7c9fbaa7",
+      "slug": "proc",
+      "title": "Uses Proc",
+      "blurb": "Use Proc to check number.",
+      "authors": ["meatball133"],
+      "contributors": ["BNAndras"]
     }
   ]
 }
