--- a/exercises/practice/leap/.articles/config.json
+++ b/exercises/practice/leap/.articles/config.json
@@ -5,7 +5,8 @@
         "slug": "performance",
         "title": "Performance deep dive",
         "blurb": "Deep dive to find out the performance between different approaches",
-        "authors": ["meatball133"]
+        "authors": ["meatball133"],
+        "contributors": ["BNAndras"]
       }
     ]
   }
