--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,16 @@ on:
     - cron: '0 0 * * 0'
 
 jobs:
-  generator:
+  test-generator:
+    name: Check Generator Templates
+    runs-on: ubuntu-22.04
+    container:
+      image: crystallang/crystal
+    steps:
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
+      - name: Run generator tests
+        run: crystal spec test-generator/spec/*
+  test-generator-templates:
     name: Check Generator Templates
     runs-on: ubuntu-22.04
     container:
