--- a/.github/workflows/doc-generator.yml
+++ b/.github/workflows/doc-generator.yml
@@ -19,14 +19,8 @@ jobs:
         run: crystal document-generator/scripts/check_docs.cr
       - name: Comment on PR if test failed
         if: failure()
-        uses: actions/github-script@v7
+        uses: exercism/pr-commenter-action@v1.5.1
         with:
           github-token: ${{github.token}}
-          script: |
-            const comment = `Hello!. Thanks for opening this pr.🙂\n\n. On the Crystal-lang repo we use a doc generator to generate all introduction.md files. The tool is located in the document-generator folder. Our tooling has noticed that they are out of sync of the about.md file, this can be caused of 2 reasons:\n\n 1. You have updated an introduction.md file instead of updating the concepts about.md file\n2. You have updated the about.md file but haven't synced.`;
-            await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
+          config-file: ".github/pr-commenter.yml"
+          
