Fic config.json

--- a/exercises/practice/leap/.approaches/config.json
+++ b/exercises/practice/leap/.approaches/config.json
@@ -18,7 +18,7 @@
       "title": "Uses Case",
       "blurb": "Use Case to check numbers.",
       "authors": ["meatball133"],
-      "contributors": [""]
+      "contributors": []
     },
     {
       "uuid": "5a0d8b86-57d7-4418-a730-09be7c9fbaa7",
