--- a/exercises/practice/raindrops/.approaches/config.json
+++ b/exercises/practice/raindrops/.approaches/config.json
@@ -1,10 +1,23 @@
 {
+  "introduction": {
+    "authors": ["meatball133"],
+    "contributors": []
+  },
   "approaches": [
     {
       "uuid": "9da625b3-e995-413e-8194-48e53aa47b66",
       "slug": "rules",
       "title": "Rules",
-      "blurb": "",
+      "blurb": "Using rules to conditionally add text to a string",
+      "authors": [
+        "meatball133"
+      ]
+    },
+    {
+      "uuid": "a6263128-0713-49d9-9305-d575aadf85e5",
+      "slug": "conditionals",
+      "title": "Conditionals",
+      "blurb": "Uses conditionals to conditionally add text to a string",
       "authors": ["meatball133"]
     }
   ]
