Updates based on feedback

--- a/exercises/practice/reverse-string/.approaches/config.json
+++ b/exercises/practice/reverse-string/.approaches/config.json
@@ -27,7 +27,7 @@
       "uuid": "f6cf9f18-47a6-408a-933c-40dd0536eef2",
       "slug": "reverse",
       "title": "Uses Reverse",
-      "blurb": "Uses the buult in reverse method.",
+      "blurb": "Uses the built-in reverse method.",
       "authors": ["meatball133"]
     }
   ]
