--- a/config.json
+++ b/config.json
@@ -18,9 +18,6 @@
   "test_runner": {
     "average_run_time": 6
   },
-  "approaches": {
-    "snippet_extension": "cr"
-  },
   "files": {
     "solution": [
       "src/%{snake_slug}.cr"
@@ -273,8 +270,12 @@
         "slug": "task-handler",
         "name": "Task Handler",
         "uuid": "2acbe0f3-bb3b-4eb7-bd6f-fd760e3816b0",
-        "concepts": ["procs-blocks"],
-        "prerequisites": ["array-methods"],
+        "concepts": [
+          "procs-blocks"
+        ],
+        "prerequisites": [
+          "array-methods"
+        ],
         "status": "beta"
       }
     ],
@@ -1410,6 +1411,14 @@
         ],
         "prerequisites": [],
         "difficulty": 3
+      },
+      {
+        "slug": "parallel-letter-frequency",
+        "name": "Parallel Letter Frequency",
+        "uuid": "4f51a517-178b-4135-84af-cdf782fabece",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 1
       }
     ]
   },
@@ -1518,7 +1527,7 @@
       "uuid": "22b6c054-9705-46c9-a14e-cf051c1d653a",
       "slug": "procs-blocks",
       "name": "Procs & Blocks"
-    }   
+    }
   ],
   "key_features": [
     {
