--- a/exercises/concept/spellbound-steel/.meta/config.json
+++ b/exercises/concept/spellbound-steel/.meta/config.json
@@ -11,5 +11,5 @@
       ".meta/src/exemplar.cr"
     ]
   },
-  "blurb": ""
+  "blurb": "Learn about Iteration by implementing methods to aid in the game of Spellbound Steel."
 }
