--- a/concepts/symbol/.meta/config.json
+++ b/concepts/symbol/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "Array is a data structure which stores a collection of elements of a certain type. Arrays are indexable and mutable",
+  "blurb": "Symbol represent a unique identifier through the program, which is created at compile time",
   "authors": ["meatball133"],
-  "contributors": ["ryanplusplus"]
+  "contributors": [""]
 }
