--- a/concepts/iteration/.meta/config.json
+++ b/concepts/iteration/.meta/config.json
@@ -1,5 +1,5 @@
 {
   "blurb": "Iteration refers to the process of repeating a set of instructions. Crystal has various methods to iterate over collections, ranges, and other data structures.",
   "authors": ["meatball133"],
-  "contributors": []
+  "contributors": ["ryanplusplus"]
 }
