--- a/exercises/concept/spellbound-steel/.meta/config.json
+++ b/exercises/concept/spellbound-steel/.meta/config.json
@@ -1,5 +1,6 @@
 {
   "authors": ["meatball133"],
+  "contributors": ["ryanplusplus"],
   "files": {
     "solution": [
       "src/spellbound_steel.cr"
