--- a/exercises/concept/the-farm/.meta/config.json
+++ b/exercises/concept/the-farm/.meta/config.json
@@ -11,5 +11,5 @@
       ".meta/src/exemplar.cr"
     ]
   },
-  "blurb": ""
+  "blurb": "Learn about error handling in Crystal while feeding cows on the farm."
 }
