--- a/config.json
+++ b/config.json
@@ -1141,6 +1141,14 @@
         "difficulty": 4
       },
       {
+        "slug": "custom-set",
+        "name": "Custom Set",
+        "uuid": "b295b187-41ff-40df-9231-f8a42eea15fc",
+        "practices": ["set"],
+        "prerequisites": [],
+        "difficulty": 4
+      },
+      {
         "slug": "rail-fence-cipher",
         "name": "Rail Fence Cipher",
         "uuid": "07e94755-9641-48cc-a6ce-2eb7d5bf039b",
@@ -1444,14 +1452,6 @@
         ],
         "prerequisites": [],
         "difficulty": 5
-      },
-      {
-        "slug": "custom-set",
-        "name": "Custom Set",
-        "uuid": "b295b187-41ff-40df-9231-f8a42eea15fc",
-        "practices": [],
-        "prerequisites": [],
-        "difficulty": 1
       }
     ]
   },
