--- a/config.json
+++ b/config.json
@@ -277,6 +277,19 @@
           "array-methods"
         ],
         "status": "beta"
+      },
+      {
+        "slug": "kitchen-calculator",
+        "name": "Kitcen Calculator",
+        "uuid": "e7250ff1-967d-4b5d-8fa8-a57fdbbe24c5",
+        "concepts": [
+          "symbol",
+          "tuples"
+        ],
+        "prerequisites": [
+          "procs-blocks"
+        ],
+        "status": "beta"
       }
     ],
     "practice": [
@@ -1552,6 +1565,16 @@
       "uuid": "22b6c054-9705-46c9-a14e-cf051c1d653a",
       "slug": "procs-blocks",
       "name": "Procs & Blocks"
+    },
+    {
+      "uuid": "a36e93cb-5ab0-4693-a6ab-ce698a3550ce",
+      "slug": "tuples",
+      "name": "Tuples"
+    },
+    {
+      "uuid": "268c4865-1a15-4f65-88d9-5a1bb1ba5ac4",
+      "slug": "symbol",
+      "name": "Symbol"
     }
   ],
   "key_features": [
