--- a/exercises/concept/kitchen-calculator/.meta/config.json
+++ b/exercises/concept/kitchen-calculator/.meta/config.json
@@ -7,5 +7,6 @@
     "exemplar": [".meta/src/exemplar.cr"]
   },
   "blurb": "Learn about tuples and symbols by converting common US baking measurements to the metric system.",
-  "icon": "kitchen-calculator"
+  "icon": "kitchen-calculator",
+  "forked_from": ["elixir/kitchen-calculator"]
 }
