Update based on feedback

--- a/concepts/symbol/.meta/config.json
+++ b/concepts/symbol/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "Symbol represent a unique identifier through the program, which is created at compile time",
+  "blurb": "Symbols represent unique identifiers throughout the program, which is created at compile time",
   "authors": ["meatball133"],
-  "contributors": []
+  "contributors": ["ryanplusplus"]
 }
