--- a/exercises/concept/kitchen-calculator/.meta/config.json
+++ b/exercises/concept/kitchen-calculator/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["ryanplusplus"],
   "files": {
     "solution": ["src/kitchen_calculator.cr"],
     "test": ["spec/kitchen_calculator_spec.cr"],
