--- a/concepts/errors/.meta/config.json
+++ b/concepts/errors/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "Crystal has modules which can be used for namespacing and organizing code. It can also be used to create mixins and to extend classes.",
+  "blurb": "Crystal has errors which can be raised and rescued. It is also possible to deffine your own exceptions.",
   "authors": ["meatball133"],
-  "contributors": []
+  "contributors": ["ryanplusplus"]
 }
