--- a/exercises/concept/weighing-machine/.meta/config.json
+++ b/exercises/concept/weighing-machine/.meta/config.json
@@ -1,5 +1,6 @@
 {
   "authors": ["meatball133"],
+  "contributors": "ryanplusplus",
   "files": {
     "solution": [
       "src/weighing_machine.cr"
